# handpan

./: CMakeLists.txt  README.md
Source/: main.cpp
Source/App/: MainComponent.cpp  MainComponent.h
Source/Audio/: HandpanEngine.cpp  HandpanEngine.h  HandpanVoice.cpp  HandpanVoice.h
Source/Mapping/: NoteMapping.cpp  NoteMapping.h
Source/Presets/: ScalePresetManager.cpp  ScalePresetManager.h
Source/Samples/: SampleManager.cpp  SampleManager.h
Source/UI/: HandpanPadComponent.cpp  HandpanPadComponent.h
